[package]
name = "memmod"
version = "2.0.0"
edition = "2021"

license = "MIT"
repository = "https://github.com/kyllingene/memmod"

authors = ["Kyllingene"]
description = "A unix utility for attaching to a process and accessing its memory."

[target.'cfg(unix)'.dependencies]
nix = "0.26.2"

[target.'cfg(windows)'.dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
]
